Refacto backend + Jotai + Tanstack
